# NanoCoder

./: README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
article/: zhihu-existing-article-update.md
corecoder/: __init__.py  cli.py  llm.py
nanocoder/: __init__.py
tests/: test_core.py  test_tools.py
